changed font and fixed minor spacing

--- a/client/src/scss/base/base.scss
+++ b/client/src/scss/base/base.scss
@@ -8,5 +8,5 @@
 
 body {
   color: #858B9A;
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
