--- a/client/src/scss/components/Indicator.scss
+++ b/client/src/scss/components/Indicator.scss
@@ -51,7 +51,7 @@
 }
 
 .indicator-value {
-  margin-top: 40px;
+  margin-top: 35px;
   color: #555a64;
   font-size: 55px;
 }
